--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                     >
                     <a
                       id="profile-link"
-                      href="https://github.com/mataoseeker1"
+                      href="https://github.com/mataoseeker"
                       target="_blank"
                       class="btn contact-details"
                       ><i class="fab fa-github"></i> GitHub</a
                     >
                     <a
-                      href="https://twitter.com/km1_collections"
+                      href="https://twitter.com/martha_ochuko"
                       target="_blank"
                       class="btn contact-details"
                       ><i class="fab fa-twitter"></i> Twitter</a
